fix: fullscreen menu does not overflow

--- a/src/assets/custom.css
+++ b/src/assets/custom.css
@@ -156,10 +156,26 @@ body:has(#fullscreen-menu-content:not(.hidden)) .draggable {
 }
 
 #overlay.mobile #overlay-content {
+    overflow: scroll !important;
     width: 100% !important;
-    height: calc(100% - 35px) !important;
-    position: fixed !important;
-    top: 35px !important;
+    height: 100% !important;
+    position: absolute !important;
+    top: 0 !important;
+    left: 0 !important;
+    background-color: var(--fallback-b1,oklch(var(--b2)/var(--tw-bg-opacity, 1)));
+    max-width: none !important;
+    transform: none !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    padding-top: 0px !important;
+}
+
+#overlay.mobile #fullscreen-menu-content {
+    overflow: scroll !important;
+    width: 100% !important;
+    height: 100% !important;
+    position: absolute !important;
+    top: 0 !important;
     left: 0 !important;
     background-color: var(--fallback-b1,oklch(var(--b2)/var(--tw-bg-opacity, 1)));
     max-width: none !important;
